# service

./: .gitattributes  .gitignore  docker-compose.yml  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 22f33555a105_init.py  a07da69bd185_add_enrich_text.py  afe4d2843d94_add_vector.py  de62ffe57eb5_add_topic.py
cprag/: __main__.py  app_factory.py  predict.py  schema.py  settings.py  upload_everything.py
cprag/answernator/: answer.py
cprag/file_processor/: processor.py
cprag/generation/: dto.py  generate.py
cprag/llm/: llm.py
cprag/recognize/: ocr.py
cprag/search/: index.py  ml.py
cprag/storage/: db.py  orm.py
cprag/vectorizer/: e5.py
ocrmodel/: cyrillic_g2.pth
static/: script.js  styles.css
templates/: index.jinja2
